fix(Team): Fix team listing styles on mobile breakpoint

--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -22,25 +22,40 @@
 }
 
 .team-member {
-  @apply flex items-start mb-8;
+  @apply mb-0;
+
+  @screen tablet {
+    @apply flex items-start mb-8;
+  }
 
   &:nth-of-type(odd) {
     img {
       order: 2;
     }
-
-    div {
-      @apply ml-0 mr-8;
-    }
   }
 
   img {
-    @apply flex-grow-0 flex-shrink-0 rounded-full media-shadow;
-    width: 8rem;
+    @apply flex-grow-0 flex-shrink-0 mx-auto rounded-full media-shadow;
+    width: 5rem;
+    transform: translateY(50%);
+
+    @screen tablet {
+      width: 8rem;
+    }
   }
 
   div {
-    @apply p-4 ml-8 bg-white rounded media-shadow;
+    @apply px-4 pt-16 pb-4 bg-white rounded media-shadow;
+
+    @screen tablet {
+      @apply p-4 ml-8;
+    }
+  }
+
+  &:nth-of-type(odd) div {
+    @screen tablet {
+      @apply ml-0 mr-8;
+    }
   }
 
   h2 {
